--- a/Online_shop/templates/base.html
+++ b/Online_shop/templates/base.html
@@ -10,7 +10,7 @@
 <body>
 <div id="wrap">
     <div class="header">
-        <div class="logo"><a href="#"><img src="{% static 'images/logo.gif' %}" alt="" border="0"/></a></div>
+        <div class="logo"><a href="{% url 'index' %}"><img src="{% static 'images/logo.gif' %}" alt="" border="0"/></a></div>
         <div id="menu">
             <ul>
                 <li class="selected"><a href="{% url 'index' %}">Home</a></li>
